plugins {
    id 'java'
}

group = 'com.matterworks'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.zaxxer:HikariCP:5.1.0'
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.3'
    implementation 'com.google.code.gson:gson:2.10.1'


    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    // Abilita feature sperimentali (utile per StructuredTaskScope di Java 25)
    options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
    jvmArgs('--enable-preview')
}

// Aggiungilo ovunque nel build.gradle (fuori da 'dependencies' o 'plugins')
sourceSets {
    main {
        java {
            // Esclude ricorsivamente tutto ciò che sta in 'dao', 'managers', ecc.
            // Aggiungi qui i package che ti stanno dando errori
            exclude 'com/matterworks/core/**'
        }
    }
}
